# 3DBinPacking

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
data/: README.md
docs/: index.md
prompts/: README.md
scripts/: prepare_data.py  run_benchmark.py  run_experiment.py  run_parameter_sweep.py  run_web_app.py  validate_solution.py
tests/: conftest.py  test_application_service.py  test_benchmark_analysis.py  test_benchmark_runner.py  test_cli_preview.py  test_construction_strategies.py  test_data_loader.py  test_dynamic_instance.py  test_experiment_architecture.py  test_extreme_point_best_fit.py  test_extreme_point_ffd.py  test_extreme_point_hill_climbing.py  test_extreme_point_simulated_annealing.py  test_feasibility_policy.py  test_geometry.py  test_level1_integration.py  test_level2_config_overrides.py  test_level2_integration.py  test_level2_model.py  test_level2_validation.py  test_level3_integration.py  test_level3_model.py  test_level3_validation.py  test_level4_data_contract.py  test_level4_ffd.py  test_level4_integration.py  test_level4_output_contract.py  test_level4_validation.py  test_level5_data_contract.py  test_level5_load_transfer.py  test_level5_runtime.py  test_level6_chain_fixture_runtime.py  test_level6_compound_geometry.py  test_level6_data_contract.py  test_level6_nesting_construction.py  test_level6_nesting_engine.py  test_level6_nesting_ffd_adapter.py  test_level6_pipeline.py  test_level6_runtime_candidate_contract.py  test_level6_runtime_semantics.py  (+11 more)
(+232 files in other folders)
