[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "3d-container-packing"
version = "0.8.0"
description = "Reproducible multi-level 3D container-packing research platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<3",
  "scipy>=1.11,<2",
  "pandas>=2.2,<3",
  "PyYAML>=6,<7",
  "plotly>=6,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "jupyterlab>=4,<5", "nbformat>=5.10,<6", "nbclient>=0.10,<1", "matplotlib>=3.8,<4"]
web = ["streamlit>=1.46,<2"]

[project.scripts]
container-packing = "container_packing.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --basetemp=.pytest-work -p no:cacheprovider"
markers = ["slow: full MILP integration tests"]
